Fixes grid layout and center photos on mobile by updating components & css

--- a/src/css/PhotoAlbum.css
+++ b/src/css/PhotoAlbum.css
@@ -1,24 +1,31 @@
+* {
+  box-sizing: border-box;
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  background: black;
+}
 .main {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+  width: 100%;
   background: black;
   color: white;
-  p {
-    padding: 0 auto;
-  }
-}
-.grid {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 1px;
-  padding: 1px;
-  grid-row-start:3;
-  grid-row-end: 1;
-}
-.grid .grid > div {
-  background-color: rgba(255, 255, 255, 0.8);
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  height: 600px;
-  padding: 2px 0;
-  font-size: 30px;
+}
+
+.grid {
+  max-width: 1400px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 4px;
+  padding: 4px;
+}
+
+@media (max-width: 600px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
