--- a/src/css/Photos.css
+++ b/src/css/Photos.css
@@ -1,5 +1,6 @@
-.ul {
-  li {
-    list-style-type:none;
-  }
+.photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
